30) kernel: ralink_raeth esw control: FCS bytes really not included to MIB counters.<br>
31) kernel: ralink_raeth esw control: add IOCTL to fetch port bytes.<br>
32) kernel: locking: Remove atomicy checks from {READ,WRITE}_ONCE.<br>
33) kernel: mips: Remove unnecessary platform dma helper functions.<br>
34) kernel: net: provide a default dev->ethtool_ops.<br>
35) kernel: net: force a list_del() in unregister_netdevice_many().<br>
36) kernel: net: packet: bail out of packet_snd() if L2 header creation fails.<br>
37) kernel: net: ax25: stop using sock->sk_protinfo.<br>
38) kernel: net: kill sock->sk_protinfo.<br>
39) kernel: net: remove extranous rcu_read_lock.<br>
40) kernel: net: ip_gre: fix possible use after free.<br>
41) kernel: net: ip_gre: remove unnecessary rcu_read_lock/unlock.<br>
42) kernel: net: netfilter: don't use module_init/exit in core IPV4 code.<br>
43) kernel: net: netfilter: remove ip_queue support.<br>
44) kernel: net: bridge: multicast: start querier timer when running user-space stp.<br>
44) kernel: net: bridge: multicast: restore router configuration on port link down/up.<br>
45) kernel: net: bridge: fix br_stp_set_bridge_priority race conditions.<br>
46) kernel: net: bridge: skip BROUTE hook if BRIDGE_EBT_BROUTE module is not enabled.<br>
47) kernel: net: bridge: fix broken ebtables on BRIDGE_NETFILTER disabled.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
4) need add in wireless->advanced BandSteering option if CONFIG_BAND_STEERING=y.<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
7) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>